# oh-my-migrate

./: .gitignore  AGENTS.md  LICENSE  README.md  codex-instruction.md  example_skill.md  install.sh  project.md  pyproject.toml  scens.md  v0.0.1-prd.md
.claude/skills/agent-migrate/: SKILL.md
examples/: AGENTS.md
examples/bulletin_board/: database.py  main.py  models.py  requirements.txt  schemas.py
fixtures/: AGENTS.md
fixtures/alembic_project/: alembic.ini
fixtures/alembic_project/alembic/: env.py
fixtures/fastapi_basic/app/: models.py
src/: AGENTS.md
src/agent_migrate/: AGENTS.md  __init__.py  cli.py  config.py  exceptions.py  orchestrator.py  types.py  updater.py
src/agent_migrate/diff/: AGENTS.md  __init__.py  engine.py  risk.py  type_map.py
src/agent_migrate/formatter/: AGENTS.md  __init__.py  diff_fmt.py  json_fmt.py  plan_fmt.py  ref.py  rls_fmt.py  snapshot_fmt.py
src/agent_migrate/inspector/: AGENTS.md  __init__.py  base.py  postgresql.py
src/agent_migrate/migration/: AGENTS.md  __init__.py  executor.py  (+4 more)
tests/: AGENTS.md  conftest.py  test_config.py  test_multitenant.py  test_types.py  test_updater.py
tests/test_cli/: test_commands.py
tests/test_diff/: test_engine.py  test_risk.py
tests/test_formatter/: test_json_fmt.py  test_output.py  test_ref.py
tests/test_inspector/: test_postgresql.py
tests/test_integration/: test_bulletin_board.py
tests/test_migration/: test_executor.py  test_planner.py  test_raw_sql.py
tests/test_parser/: test_rls_parsing.py  test_sqlalchemy.py
tests/test_rls/: test_presets.py  test_rls_diff.py
(+11 files in other folders)
